<resources>
    <string name="app_name">SpaceX</string>
    <string name="login_title">Войти в аккаунт</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Войти</string>
    <string name="dont_have_account_title">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="register_title">Регистрация</string>
    <string name="do_you_have_account">Уже есть аккаунт? Войти</string>
    <string name="hint_name">Name</string>
    <string name="email_hint">Email</string>
    <string name="et_password_register">Password</string>
</resources>